--- a/EcoFriendly/main/templates/main/home.html
+++ b/EcoFriendly/main/templates/main/home.html
@@ -3,6 +3,51 @@
 {% block title %}
 Home Page
 {% endblock %}
+
 {% block content %}
+
+  <div class="top-section"> 
+    <h2><span class="material-symbols-outlined align-middle">eco</span> "Be the change. Live eco-friendly."</h2>
+
+    <div class="tip-slider">
+      <div class="tip-list">
+        {% for tip in tips %}
+          <p>Daily Reminder: {{ tip }}</p>
+        {% endfor %}
+      </div>
+    </div>
+
+    <form class="d-flex mt-3" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+
+<div class="bottom-section">
+  <div class="latest">
+    <h3>Latest Actions</h3>
+    <a href="{% url 'eco:all_action_view' %}"><h3>More <span class="material-symbols-outlined">eco</span></h3></a>
+  </div>
+<br> 
+  <div class="row latest-actions-row">
+    {% for action in actions %}
+      <div class="col-md-4 col-lg-3 mb-4 d-flex">
+        <div class="card eco-card">
+          <img src="{{ action.image.url }}" class="card-img-top" alt="{{ action.title }}" />
+          <div class="card-body">
+            <h6 class="eco-card-title mb-2">{{ action.title }}</h6>
+            <p>
+              {{ action.description|truncatewords:5 }}...
+              <a href="{% url 'eco:detail_view' action.id %}" class="text-decoration-none text-success">Read more</a>
+            </p>
+            <p><strong>📍 {{ action.location }}</strong></p>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
+
+
 {% endblock %}
 
