--- a/EcoFriendly/eco/templates/eco/detail.html
+++ b/EcoFriendly/eco/templates/eco/detail.html
@@ -41,6 +41,41 @@ Detailed Action Page
     </div>
   </div>
 </div>
+
+<h2>Comments [{{ comments.count }}]</h2>
+
+<div class="row g-4">
+  {% for comment in comments %}
+    <div class="col d-flex">
+      <div class="card border-0 h-100">
+        <div class="card-body d-flex flex-column">
+          <p class="flex-grow-1">{{ comment.content }}</p>
+          <p class="flex-grow-1">{{ comment.get_rating_display }}</p>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+</div>
+
+<br> 
+<br>
+<h2>Add Comment</h2>
+<div class="container">
+<form class="d-flex flex-column gap-2  w-100" action="{% url 'eco:add_comment_view' action.id %}" method="post">
+    {% csrf_token %}
+    <textarea class="form-control" name="content" required minlength="3" placeholder="content"></textarea>
+  <div class="d-flex gap-2 align-items-center"> 
+  <h5 class="m-0 p-0">review:</h5>
+  <div class="Location"> 
+    {% for val, label in RatingChoices %}
+      <input type="radio" id="{{val}}" name="rating" value="{{val}}" required>
+      <label for="{{val}}">{{label}}</label>
+    {% endfor %}
+  </div>
+</div>
+    <input type="submit" class="btn btn-primary btn-dark" value="Add Comment" />
+</form>
+</div>
   <br> 
 
     {% endblock %}
