--- a/EcoFriendly/eco/templates/eco/update_action.html
+++ b/EcoFriendly/eco/templates/eco/update_action.html
@@ -1,29 +1,33 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-Add Action Page
+Update Action Page
 {% endblock %}
 
 {% block content %}
-<div class="col-lg-8 add-page">
-  <h1 class="fw-bold text-center mb-4">Add Action</h1>
+<div class="col-lg-8 add-page mx-auto">
+  <h1 class="fw-bold text-center mb-4">Update {{action.title}}</h1>
   <form class="d-flex flex-column gap-3" action="{% url 'eco:new_action_view' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="text" placeholder="Title" name="title" class="form-control" required/>
-    <textarea placeholder="Description" name="description" class="form-control" required></textarea>
-    <input type="file" name="image" class="form-control" required/>
+    <input type="text" placeholder="{{action.title}}" name="title" class="form-control" required/>
+    <textarea placeholder="Description" name="description" class="form-control" required>{{action.description}}</textarea>
+      <div class="row"> 
+        <div class="col-3"> 
+            <img src="{{action.image.url}}" class="w-100" >
+        </div>
+      </div>
+      <input type="file" name="image" class="form-control"/> 
 
-  <div class="d-flex gap-2 align-items-center"> 
-  <h5 class="m-0 p-0">Location:</h5>
-      <div class="category"> 
-    {% for val, label in LocationChoices %}
-        <input type="radio" id="{{ val }}" name="loaction" value="{{ val }}"
-        {% if action.loction == val %}checked{% endif %}>
-        <label for="{{ val }}">{{ label }}</label>
-    {% endfor %}
-    </div>
-
+<h5 class="m-0 p-0">Location:</h5>
+<div class="location"> 
+  {% for val, label in locationChoices %}
+    <input type="radio" id="{{ val }}" name="location" value="{{ val }}"
+      {% if action.location == val %} checked {% endif %}>
+    <label for="{{ val }}">{{ label }}</label>
+  {% endfor %}
 </div>
+
+
 
     <button type="submit" class="btn btn-primary add-btn">Add</button>
   </form>
