--- a/EcoFriendly/eco/templates/eco/add_action.html
+++ b/EcoFriendly/eco/templates/eco/add_action.html
@@ -5,7 +5,7 @@ Add Action Page
 {% endblock %}
 
 {% block content %}
-<div class="col-lg-8 add-page">
+<div class="col-lg-8 mx-auto add-page">
   <h1 class="fw-bold text-center mb-4">Add Action</h1>
   <form class="d-flex flex-column gap-3" action="{% url 'eco:new_action_view' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
