--- a/EcoFriendly/main/templates/main/home.html
+++ b/EcoFriendly/main/templates/main/home.html
@@ -12,13 +12,13 @@ Home Page
     <div class="tip-slider">
       <div class="tip-list">
         {% for tip in tips %}
-          <p>Daily Reminder: {{ tip }}</p>
+          <p>Reminder: {{ tip }}</p>
         {% endfor %}
       </div>
     </div>
 
-    <form class="d-flex mt-3" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+    <form class="d-flex mt-3" role="search" action="{% url 'eco:search_view' %}">
+      <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search" name="search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
@@ -31,8 +31,8 @@ Home Page
 <br> 
   <div class="row latest-actions-row">
     {% for action in actions %}
-      <div class="col-md-4 col-lg-3 mb-4 d-flex">
-        <div class="card eco-card">
+      <div class="col-md-4 col-lg-3 mb-4 d-flex justify-content-center">
+        <div class="card eco-card w-100">
           <img src="{{ action.image.url }}" class="card-img-top" alt="{{ action.title }}" />
           <div class="card-body">
             <h6 class="eco-card-title mb-2">{{ action.title }}</h6>
@@ -41,6 +41,18 @@ Home Page
               <a href="{% url 'eco:detail_view' action.id %}" class="text-decoration-none text-success">Read more</a>
             </p>
             <p><strong>📍 {{ action.location }}</strong></p>
+            {% if action.avg_rating %}
+  <p>
+            Average Review:
+            {% if action.avg_rating|floatformat:0 == "1" %} 👍🏻 Try Harder
+            {% elif action.avg_rating|floatformat:0 == "2" %} 🎉 Keep Going
+            {% elif action.avg_rating|floatformat:0 == "3" %} 🤩 Nice Job
+            {% elif action.avg_rating|floatformat:0 == "4" %} 🥇 Excellent
+            {% endif %}
+          </p>
+        {% else %}
+          <p>No ratings yet</p>
+        {% endif %}
           </div>
         </div>
       </div>
