--- a/EcoFriendly/eco/templates/eco/detail.html
+++ b/EcoFriendly/eco/templates/eco/detail.html
@@ -28,7 +28,7 @@ Detailed Action Page
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Post</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Action</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
