--- a/EcoFriendly/main/templates/main/home.html
+++ b/EcoFriendly/main/templates/main/home.html
@@ -5,7 +5,13 @@ Home Page
 {% endblock %}
 
 {% block content %}
-
+{% if messages %}
+  <script>
+      {% for message in messages %}
+        alert("{{ message}}");
+      {% endfor %}
+  </script>
+{% endif %}
   <div class="top-section"> 
     <h2><span class="material-symbols-outlined align-middle">eco</span> "Be the change. Live eco-friendly."</h2>
 
@@ -59,7 +65,6 @@ Home Page
     {% endfor %}
   </div>
 </div>
-
 
 {% endblock %}
 
