--- a/EcoFriendly/main/templates/main/base.html
+++ b/EcoFriendly/main/templates/main/base.html
@@ -20,40 +20,43 @@
 <!-- Body Section -->
 <body>
 <div class="page">
-  <nav class="navbar navbar-expand-lg custom-navbar">
-  <div class="container-fluid d-flex align-items-center justify-content-between">
+<nav class="navbar navbar-expand-lg custom-navbar">
+  <div class="container-fluid d-flex align-items-center">
 
-    <a class="navbar-brand logo-text" href="#">EcoFriendly</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+    <a class="navbar-brand logo-text" href="{% url 'main:home_view' %}">EcoFriendly</a>
+
+    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
       aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-center" id="navbarMain">
-      <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-        <li class="nav-item"><a class="nav-link nav-text {% if request.resolver_match.url_name == 'home_view' %}active{% endif %}" href="{% url 'main:home_view' %}">Home</a></li>
-        <li class="nav-item"><a class="nav-link nav-text {% if request.resolver_match.url_name == 'all_action_view' %}active{% endif %}" href="{% url 'eco:all_action_view' %}">All Actions</a></li>
-        <li class="nav-item"><a class="nav-link nav-text {% if request.resolver_match.url_name == 'new_action_view' %}active{% endif %}" href="{% url 'eco:new_action_view' %}">Add Action</a></li>
-        <li class="nav-item"><a class="nav-link nav-text {% if request.resolver_match.url_name == 'contact_view' %}active{% endif %}" href="{% url 'main:contact_view' %}">Contact Us</a></li>
+    <div class="collapse navbar-collapse" id="navbarMain">
+
+
+      <ul class="navbar-nav mb-2 mb-lg-0 text-center mx-auto justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link nav-text {% if request.resolver_match.url_name == 'home_view' %}active{% endif %}" href="{% url 'main:home_view' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-text {% if request.resolver_match.url_name == 'all_action_view' %}active{% endif %}" href="{% url 'eco:all_action_view' %}">All Actions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-text {% if request.resolver_match.url_name == 'new_action_view' %}active{% endif %}" href="{% url 'eco:new_action_view' %}">Add Action</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-text {% if request.resolver_match.url_name == 'contact_view' %}active{% endif %}" href="{% url 'main:contact_view' %}">Contact Us</a>
+        </li>
       </ul>
-    </div>
 
-    <div class="d-flex align-items-center gap-3">
-      <a href="{% url 'quiz:quiz_view' %}">
-        <button class="btn challenge-btn">Take challenge</button>
-      </a>
-      <a href="#" data-mode="landscape" class="mode-icon">
-        <span class="material-symbols-outlined">landscape</span>
-      </a>
-      <a href="#" data-mode="tsunami" class="mode-icon">
-        <span class="material-symbols-outlined">tsunami</span>
-      </a>
-      <a href="#" data-mode="forest" class="mode-icon">
-        <span class="material-symbols-outlined">forest</span>
-      </a>
-    </div>
 
+      <div class="d-flex ms-auto">
+        <a href="{% url 'quiz:quiz_view' %}">
+          <button class="btn challenge-btn">Take challenge</button>
+        </a>
+      </div>
+
+    </div>
   </div>
 </nav>
 
@@ -68,10 +71,11 @@
             </div>
   </div>
 
-<footer class="bg-light py-3">
+<footer class="bg-light py-3 footer">
   <nav class="container d-flex justify-content-between">
-    <a href="{% url 'main:home_view' %}" class="text-decoration-none text-dark">EcoFriendly</a>
-    <a href="{% url 'quiz:all_question_view' %}" class="text-decoration-none text-dark">Question Managment</a>
+    <a href="{% url 'main:home_view' %}" class=" {% if request.resolver_match.url_name == 'home_view' %}active{% endif %} nav-text">EcoFriendly</a>
+    <a href="{% url 'main:messages_view' %}" class=" {% if request.resolver_match.url_name == 'messages_view' %}active{% endif %} nav-text">Messages</a>
+    <a href="{% url 'quiz:all_question_view' %}" class=" {% if request.resolver_match.url_name == 'all_question_view' %}active{% endif %} nav-text">Question Managment</a>
   </nav>
 </footer>
 
