--- a/EcoFriendly/eco/templates/eco/detail.html
+++ b/EcoFriendly/eco/templates/eco/detail.html
@@ -18,8 +18,8 @@ Detailed Action Page
     </div>
   </div>
    <div class="d-flex justify-content-end gap-2">
-               <a href="{% url 'eco:update_view' action.id %}" class="btn btn-primary btn-dark" >Update</a>
-               <button type="button" class="btn btn-danger btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+               <a href="{% url 'eco:update_view' action.id %}" class="btn btn-primary update" >Update</a>
+               <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Delete
                </button>
             </div>
@@ -42,7 +42,7 @@ Detailed Action Page
   </div>
 </div>
 
-<h2>Comments [{{ comments.count }}]</h2>
+<h2 class="comment">Comments [{{ comments.count }}]</h2>
 
 <div class="row g-4">
   {% for comment in comments %}
@@ -59,7 +59,7 @@ Detailed Action Page
 
 <br> 
 <br>
-<h2>Add Comment</h2>
+<h2 class="comment">Add Comment</h2>
 <div class="container">
 <form class="d-flex flex-column gap-2  w-100" action="{% url 'eco:add_comment_view' action.id %}" method="post">
     {% csrf_token %}
@@ -73,7 +73,7 @@ Detailed Action Page
     {% endfor %}
   </div>
 </div>
-    <input type="submit" class="btn btn-primary btn-dark" value="Add Comment" />
+    <input type="submit" class="btn btn-primary update" value="Add Comment" />
 </form>
 </div>
   <br> 
