--- a/EcoFriendly/main/static/css/style.css
+++ b/EcoFriendly/main/static/css/style.css
@@ -242,7 +242,8 @@
   display: flex;
 }
 .label-all{
-   color: #198754;
+  color: #198754;
+  font-weight: bold;
 }
 .message{
   color: #198754;
@@ -257,7 +258,27 @@
 .btn.filter{
   background-color: #198754 ;
 }
+.pagination .page-link {
+  color: #145235;
+  border: 1px solid #145235;
+}
 
+.pagination .page-item.active .page-link {
+  background-color: #145235;
+  border-color: #145235;
+  color: #fff;
+}
+
+.pagination .page-link:hover {
+  background-color: #e0f2e9;
+  color: #145235;
+}
+
+.pagination .page-item.disabled .page-link {
+  color: #ccc;
+  border-color: #ccc;
+  background-color: #f9f9f9;
+}
 .graph{
   background-color: white;
   width: 100%;
@@ -269,39 +290,6 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.quiz {
-  background-color: white;
-  width: 100%;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 1.5rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.quiz h2 {
-  font-weight: 600;
-  color: #198754;
-}
-
-.question {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: Up 0.6s forwards;
-}
-
-@keyframes Up {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.question h4{
-  font-weight: 600;
-  color: #198754;
-}
 .question form {
   display: flex;
   justify-content: center;
@@ -325,7 +313,14 @@
   font-family: Arial, sans-serif;
 }
 
-
+.quiz-welcome h2{
+  color: #145235;
+  font-weight: bold;
+}
+.quiz-welcome p{
+  color: #198754; 
+  font-size: 1.5rem;
+}
 #question {
   color: #198754; 
   font-weight: bold;
@@ -393,12 +388,14 @@
 #explanation.correct {
   color: #198754; 
   font-weight: bold;
+  font-size: 1.5rem;
 }
 
 
 #explanation.wrong {
   color: #dc3545; 
   font-weight: bold;
+  font-size: 1.5rem;
 }
 
 
@@ -409,12 +406,35 @@
   display: block;
 }
 
+#a_text{
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+#b_text{
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+#c_text{
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+#d_text{
+  font-weight: bold;
+  font-size: 1.25rem;
+}
 
 .quiz-motivation {
   margin-top: 20px;
   font-weight: bold;
   color: #145235;
-  font-size: 1.1rem;
+  font-size: 2rem;
 }
 
 
+.comment{
+  color: #198754;
+  font-weight: bold;
+}
